svn-app/src/assets/components/styles/TaskObject.css
.object-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    border: 1px solid #cfccf8a1;
    background: #414050a1;
    border-radius: 10px;
    text-align: left;
    padding: 15px;
    gap: 5px;
    width: calc(100% - 30px);
}

.task-status-container{
    display: flex;
    flex-direction: row;
    font-size: 18px;
    gap: 10px;
    
}

.task-status-container > div{
    display: flex;
    flex-direction: row;
    gap: 5px;
    align-items: center;
    border: 2px solid #cfccf8a1;
    padding: 0 15px;
    border-radius: 20px;
    font-weight: 900;
    text-transform: uppercase;
}

